feedly.css
/* ... */
.cdm.expandable.active .cdmHeader .updated,
.cdm.expanded .cdmHeader .updated {
	right: 80px;
}
.cdm.expandable.active .cdmHeader .scoreWrap,
.cdm.expanded .cdmHeader .scoreWrap {
	right: 35px;
}

/* articles - common */
div.articleNote {
	margin: 5px 34px;
	border-radius: 0;
}
#headlines-frame .cdm,
.hl {
	position: relative;
	-webkit-margin-end: -6px;
}
.cdm.expanded:first-child,
.cdm.expandable:first-child,
.hl:first-child {
	margin-top: 0;
}
.cdm.expanded.active,
.cdm.expandable.active,
.hl.active {
	z-index: 1;
	border-color: #ccc;
	box-shadow: 0 1px 2px rgba(0,0,0,.1);
}
.cdm > hr {
	display: none;
}
.cdm .title,
.hlTitle {
	font-size: 13px;
	font-weight: bold;
}
.cdm .cdmExcerpt,
.cdm.expandable .author,
.hlTitle .contentPreview {
	font-size: 11px;
	font-weight: normal;
	color: #aaa;
}
.cdm .title,
.cdm .cdmHeader,
.hl .hlTitle a,
.hl .hlUpdated {
	color: #999;
}
.cdm.Unread .title,
.cdm.Unread .cdmHeader,
.hl.Unread .hlTitle a,
.hl.Unread .hlUpdated,
.postHeader .postTitle a,
#floatingTitle a {
	color: #333;
}
.cdm.Unread .cdmExcerpt,
.cdm.Unread.expandable .author,
.hl.Unread .hlTitle .contentPreview {
	color: #777;
}
.cdm .title:hover,
.hlTitle a:hover,
.postHeader .postTitle a {
	text-decoration: none;
}
.cdmHeader img,
.cdmHeader input,
.cdmFooter img,
.hl img,
.hl input,
#floatingTitle img,
#floatingTitle input {
	vertical-align: middle;
	margin: 0 2px;
}
.cdm.expandable:not(.active) .cdmHeader > div:first-child > *,
.cdm.expandable:not(.active) .cdmHeader > .scoreWrap > *,
.hlLeft > *,
.hlRight > * {
	position: relative;
	top: -1px;
}
.cdmHeader > div,
.cdmHeader .updated,
.hlLeft,
.hlUpdated,
.hlRight,
.author,
#floatingTitle > div,
#floatingTitle .updated {
	white-space: nowrap;
}
.hlUpdated div {
	display: inline;
	padding-left: 10px;
}
.cdmHeader > *,
#floatingTitle > * {
	vertical-align: baseline !important;
}
.cdmHeader .titleWrap,
.hl .hlTitle,
#floatingTitle .titleWrap {
	width: 100%;
}
.cdmHeader .updated,
.cdmHeader .hlFeed,
.hlUpdated,
#floatingTitle .updated {
	font-size: 11px;
}
.cdmHeader .hlFeed a {
	display: inline-block;
	padding: 0 5px;
	border-radius: 3px;
	color: #333;
}
.cdmContentInner {
	padding: 10px 34px;
}
.postHeader,
.postContent {
	padding: 10px 35px;
	-webkit-padding-end: 29px;
}
.postHeader {
	background: #f5f5f5;
	border-bottom: 1px solid #eee;
	font-size: 11px;
	color: #777;
}
.postHeader .postDate {
	float: right;
	padding-top: 3px;
	white-space: nowrap;
}
.postHeader .postTitle a {
	font-size: 14px;
	font-weight: bold;
}
.postTags > * {
	vertical-align: middle;
	margin: 0 1px;
}
.cdmFooter {
	clear: both;
	padding: 5px;
}
.collapseBtn {
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	padding: 7px 7px 6px;
	font-size: 11px;
	line-height: 1;
	text-align: right;
	vertical-align: top;
}
.collapseBtn:hover:before {
	content: "Collapse article";
	position: relative;
	top: 1px;
	margin: 1px 18px 0;
	pointer-events: none;
}
.collapseBtn img {
	margin: -7px 0 -6px -9999px;
	padding: 7px 0 6px 9999px;
}

/* floating title extensions */
#floatingTitle {
	position: absolute;
	z-index: 5;
	top: 35px;
	right: 33px;
	left: 33px;
	background: #fff;
	border: 2px solid #fff;
	border-bottom: 1px solid #eee;
}
#floatingTitle .titleWrap {
	padding-top: 2px;
}
#floatingTitle > div:first-child {
	padding-left: 0;
}
#floatingTitle .scoreWrap {
	padding-right: 0;
}
#floatingTitle > div:first-child:after {
	content: "";
	display: block;
	width: 57px;
}
#floatingTitle .scoreWrap:after {
	content: "";
	display: block;
	width: 40px;
}
#floatingTitle .hlFeed,
#floatingTitle .author {
	display: none;
}

/* article content */
.cdmContentInner,
.postContent {
	clear: both;
	overflow: auto;
	font-size: 14px;
}
.cdmContentInner h1,
.postContent h1,
.cdmContentInner h2,
.postContent h2,
.cdmContentInner h3,
.postContent h3,
.cdmContentInner h4,
.postContent h4,
.cdmContentInner h5,
.postContent h5,
.cdmContentInner h6,
.postContent h6 {
	margin-top: 35px;
	margin-bottom: 14px;
	font-family: "Roboto Condensed", "Arial Narrow", "Liberation Sans Narrow", Arial, Helvetica, sans-serif;
	font-weight: bold;
	text-rendering: optimizeLegibility;
}
.cdmContentInner h1,
.postContent h1,
.cdmContentInner h2,
.postContent h2 {
	font-weight: normal;
}

.cdmContentInner p,
.postContent p {
	max-width: 50em;
}
.cdmContentInner tr,
.postContent tr {
	vertical-align: top
}
.cdmContentInner img,
.postContent img {
	max-width: 100%;
	width: auto;
	height: auto;
}
.cdmContentInner pre,
.postContent pre {
	white-space: pre-wrap;
}
.cdmContentInner q,
.postContent q,
.cdmContentInner blockquote,
.postContent blockquote {
	display: block;
	margin: 1em 0;
	padding: 0 0 0 1em;
	border-left: 4px solid #ccc;
}

/* extras */
#cmdline {
	position: absolute;
	z-index: 5;
	bottom: 5px;
	left: 5px;
	padding: 1px;
	width: 18px;
	border-radius: 4px;
	background-color: #333;
	color: #fff;
	font-weight: bold;
	text-align: center;
}
.cdmFeedTitle {
	padding: 40px 0 25px;
	color: #bbb;
}
.cdmFeedTitle:first-child {
	padding-top: 30px;
}
.cdmFeedTitle > div:first-child{
	float: none !important;
	display: inline-block;
	padding-right: 7px;
}
.cdmFeedTitle .title {
	font: normal normal normal 20px/1.25 "Roboto Condensed", "Arial Narrow", "Liberation Sans Narrow", Arial, Helvetica, sans-serif;
	padding-right: 7px;
	text-rendering: optimizeLegibility;
}
.cdmFeedTitle .title,
.cdmFeedTitle a {
	color: #bbb;
}
.whiteBox {
	text-align: center;
	padding: 1em;
}
.insensitive {
	color: #bbb;
}
#feeds-holder,
#headlines-frame,
#content-insert {
	-webkit-overflow-scrolling: touch;
}


/* PREFERENCES ************************************************************/

/* from prefs.css */

/* @24 */
#pref-filter-wrap, #pref-filter-header, #pref-filter-content,
#pref-label-wrap, #pref-label-header, #pref-label-content,
#pref-user-wrap, #pref-user-header, #pref-user-content,
#pref-instance-wrap, #pref-instance-header, #pref-instance-content {
	margin : 0;
	padding : 0;
	border-width : 0;
}
/* ... */

